A few demo changes
Nothing meaning fl only to show class

--- a/Slides/index.html
+++ b/Slides/index.html
@@ -13,7 +13,7 @@
   <body>
     <main  id="frise">
       <section>
-            <h1>Section can contain more than images.</h1>
+            <h1>All sections can contain more than images.</h1>
             <p>These images are from <a href="http://www.boredpanda.com/modern-word-combinations-urban-dictionary/">a Bored Panda post</a>. If you want more go there and look at page 2 and 3.</p>
       </section><section><img src="fx/IMG_4988.png">
       </section><section><img src="fx/IMG_4989.png">
@@ -45,7 +45,7 @@
       </section> 
     </main>
     <nav id="buttons">
-        <img src="fx/arrow_left.png" id="left">      
+        <img id="anArrow" src="fx/arrow_left.png" id="left">      
         <img src="fx/arrow_right.png" id="right">
     </nav>
     <script src="js/jquery-1.11.0.js"></script>
