--- a/wordlist/wordlistTable.htm
+++ b/wordlist/wordlistTable.htm
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 
-		<title>Javascript sorting exercise</title>
+		<title>Brors Javascript sorting exercise</title>
 	</head>
 
 	<body BGCOLOR="green" onLoad="document.getElementById('oprTekst').focus()"> 
